--- a/src/scss/modules/_style.scss
+++ b/src/scss/modules/_style.scss
@@ -1,4 +1,5 @@
 @import "./responsive";
+@import "./collapse_test";
 body {
     font-family: $lato;
     margin:0;
@@ -396,21 +397,21 @@ body {
 }
 
 // Animation bonus
-@keyframes rouge {
-    from {
-       bottom: -170px;
-    }
+// @keyframes rouge {
+//     from {
+//        bottom: -170px;
+//     }
     
-    to {
-        bottom: 0;
-    }
-  }
-  @keyframes disappear {
-    from {
-       bottom: -20px;;
-    }
+//     to {
+//         bottom: 0;
+//     }
+//   }
+//   @keyframes disappear {
+//     from {
+//        bottom: -20px;;
+//     }
   
-    to {
-      bottom: 20px;
-    }
-  }
+//     to {
+//       bottom: 20px;
+//     }
+//   }
