--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16144,6 +16144,26 @@ h3 {
     transition: 0.7s !important;
   }
 }
+#menu .tomber .fa {
+  float: right;
+  transition: 0.3s transform ease-in-out;
+}
+
+#menu .tomber .collapsed .fa {
+  transform: rotate(90deg);
+}
+
+#menu .tomber a {
+  margin-left: 10%;
+  text-align: center;
+  font-family: "courgette", cursive;
+  font-size: xx-large;
+  text-decoration: none;
+}
+#menu .tomber a i {
+  margin: auto 5px;
+}
+
 body {
   font-family: "lato", sans-serif;
   margin: 0;
