--- a/src/scss/modules/_collapse_test.scss
+++ b/src/scss/modules/_collapse_test.scss
@@ -1,7 +1,20 @@
-.card-header .fa {
+#menu .tomber .fa {
+    float: right;
     transition: .3s transform ease-in-out;
 }
-.card-header .collapsed .fa {
+#menu .tomber .collapsed .fa {
     transform: rotate(90deg);
 }
-  
+
+#menu .tomber {
+    a {
+        margin-left: 10%;
+        text-align: center;
+        font-family: $courgette;
+        font-size: xx-large;
+        text-decoration: none;
+        i {
+            margin: auto 5px;
+        }
+    }
+}
