--- a/src/scss/modules/_responsive.scss
+++ b/src/scss/modules/_responsive.scss
@@ -54,7 +54,7 @@
             width: 60% !important;
         }
     }
-    #carouselExampleIndicators {
+    #carouselExampleIndicatorsMd {
         .chefsuper {
             margin-bottom: 100px !important;
             .chef {
@@ -144,15 +144,12 @@ body {
         #resa {
             .query {
                 width: 95%;
+                height: auto;
             }
         }
         #blog {
-            .alert {
-                width: 100%;
-                left: 0;
-            }
             .text {
-                margin-top: 200px;
+                margin-top: 80px;
             }
         }
     }
@@ -161,7 +158,7 @@ body {
             width: 80% !important;
         }
     }
-    #carouselExampleIndicators {
+    #carouselExampleIndicatorsSm {
         .chefsuper {
             margin-bottom: 100px !important;
             .chef {
