--- a/src/scss/modules/_style.scss
+++ b/src/scss/modules/_style.scss
@@ -87,7 +87,7 @@ body {
                                     font-size: 4vw;
                                     em {
                                         font-style: normal;
-                                        color: $danger
+                                        color: $danger;
                                     }
                                 }
 
@@ -163,6 +163,26 @@ body {
     .title {
         // width: 100%;
         height: 120px;
+    }
+    #menu .tomber .fa {
+        float: right;
+        transition: .3s transform ease-in-out;
+    }
+    #menu .tomber .collapsed .fa {
+        transform: rotate(90deg);
+    }
+    
+    #menu .tomber {
+        a {
+            margin-left: 10%;
+            text-align: center;
+            font-family: $courgette;
+            font-size: xx-large;
+            text-decoration: none;
+            i {
+                margin: auto 5px;
+            }
+        }
     }
     .menu {
         overflow: hidden;
@@ -276,7 +296,12 @@ body {
                 display: flex;
                 justify-content: center;
                 .query {
-                    width: 70%;
+                    .m-auto {
+                        width: 600px;
+                    }
+                    width: 800px;
+                    height: 600px;
+
                     margin: 50px 0;
                     border-radius: 15px;
                     display: flex;
@@ -302,6 +327,11 @@ body {
             width: 90%;
             .columns2 {
                 .col-lg-6 {
+                    .sous-col {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                    }
                     .text {
                         width: 90%;
                         margin-top: 50px;
@@ -326,6 +356,7 @@ body {
                                 em {
                                     font-style: normal;
                                     font-size: larger;
+                                    font-weight: bolder;
                                 }
                             }
                         }
@@ -342,7 +373,7 @@ body {
             }
         }
     }
-    #testimonials {
+    #testimonial {
         background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)), url("../../../public/images/testimonials_background.jpg");
         background-repeat: no-repeat;
         background-size: cover;
